Fix context menu and hover preview z-index (#5797)
* fix hover preview appearing above context menu

* consolidate z-index

--- a/src/components/app/Root.css
+++ b/src/components/app/Root.css
@@ -3,7 +3,7 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 #root {
-  z-index: 0;
+  z-index: var(--z-root);
   display: flex;
   min-width: 0; /* This allows Flexible Layout to shrink this further than its min-content */
   flex: 1;
